--- a/game/.godot/editor/editor_layout.cfg
+++ b/game/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://sprites/enemy_sprite.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/enemy.tscn")
-current_scene="res://scenes/enemy.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/enemy.tscn", "res://scenes/battle.tscn", "res://scenes/battle_ui.tscn")
+current_scene="res://scenes/battle.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://scripts/battle.gd", "res://scripts/battle_ui.gd", "res://scripts/entity.gd"]
+selected_script="res://scripts/battle_ui.gd"
+open_help=["@GlobalScope"]
 script_split_offset=70
 list_split_offset=0
 
