--- a/game/.godot/editor/editor_layout.cfg
+++ b/game/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/enemy.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,14 +31,14 @@ open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tsc
 current_scene="res://scenes/battle.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/battle.gd", "res://scripts/battle_ui.gd", "res://scripts/entity.gd"]
-selected_script="res://scripts/battle_ui.gd"
-open_help=["@GlobalScope"]
+selected_script="res://scripts/battle.gd"
+open_help=["@GlobalScope", "AnimatedSprite2D"]
 script_split_offset=70
 list_split_offset=0
 
